buildSrc/src/test/resources/test-projects/invalid-demo/demos/duplicate_one/src/nativeMain/kotlin/demos/duplicateone/Main.kt
package demos.duplicateone

fun main() {
    println("Duplicate one demo")
}
